Fixes the hard wrap feature of markdown+the bottom padding on show notes

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -199,7 +199,10 @@ label {
     *:first-child {
       margin-top: 0;
     }
-  } 
+    *:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
 td > .show-notes-box {
   margin:0;
